[gd_scene load_steps=17 format=3 uid="uid://dwo1a0gci6pg0"]

[ext_resource type="Script" path="res://ui/game_ui.gd" id="1_73eq0"]
[ext_resource type="Texture2D" uid="uid://c1nfdyv0bimig" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Banners/Banner_Horizontal.png" id="1_rkgq2"]
[ext_resource type="Texture2D" uid="uid://b2elg6qdj5ojc" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Banners/Carved_Regular.png" id="3_6v4qn"]
[ext_resource type="Texture2D" uid="uid://cqof6crdopmg4" path="res://addons/img/Tiny Swords by Pixel Frog/Resources/Resources/M_Idle_(NoShadow).png" id="3_f58pc"]
[ext_resource type="Texture2D" uid="uid://bbv4klajfgndp" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Banners/Carved_3Slides.png" id="3_lhtfq"]
[ext_resource type="FontFile" uid="uid://btrtsnhxf857a" path="res://font/Taroca Regular.ttf" id="4_p6kxn"]
[ext_resource type="Texture2D" uid="uid://cmw2e2rw8w5dn" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Ribbons/Ribbon_Yellow_3Slides.png" id="6_bx5w1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ucb5"]
texture = ExtResource("1_rkgq2")
texture_margin_left = 32.0
texture_margin_top = 8.0
texture_margin_right = 32.0
texture_margin_bottom = 40.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gh0e0"]
texture = ExtResource("3_lhtfq")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 1

[sub_resource type="LabelSettings" id="LabelSettings_q2dkj"]
font = ExtResource("4_p6kxn")
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hmdon"]
texture = ExtResource("1_rkgq2")
texture_margin_left = 32.0
texture_margin_top = 8.0
texture_margin_right = 32.0
texture_margin_bottom = 40.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_guvbl"]
texture = ExtResource("3_6v4qn")

[sub_resource type="LabelSettings" id="LabelSettings_78x3a"]
font = ExtResource("4_p6kxn")
font_size = 23
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pnar"]
atlas = ExtResource("3_f58pc")
region = Rect2(40, 48, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r6im"]
atlas = ExtResource("6_bx5w1")

[sub_resource type="LabelSettings" id="LabelSettings_taq47"]
font = ExtResource("4_p6kxn")
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="GameUi" type="CanvasLayer"]
script = ExtResource("1_73eq0")

[node name="TimePanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.0
offset_top = 13.0
offset_right = 94.0
offset_bottom = 93.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8ucb5")

[node name="Panel" type="Panel" parent="TimePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -34.0
offset_right = 68.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gh0e0")

[node name="TimerLabel" type="Label" parent="TimePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.5
offset_top = 8.0
offset_right = 53.5
offset_bottom = 45.0
grow_horizontal = 2
text = "00:00"
label_settings = SubResource("LabelSettings_q2dkj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResourcesPanel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 13.0
offset_right = 48.0
offset_bottom = 93.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_hmdon")

[node name="Panel" type="Panel" parent="ResourcesPanel"]
layout_mode = 1
offset_left = 26.0
offset_top = 6.0
offset_right = 66.0
offset_bottom = 42.0
theme_override_styles/panel = SubResource("StyleBoxTexture_guvbl")

[node name="MeatLabel" type="Label" parent="ResourcesPanel"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 67.0
offset_top = 14.0
offset_right = 112.0
offset_bottom = 38.0
text = "0"
label_settings = SubResource("LabelSettings_78x3a")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ResourcesPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 7.0
offset_right = 96.0
offset_bottom = 73.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_4pnar")

[node name="Experience" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -560.0
offset_top = -40.0
offset_right = 560.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
nine_patch_stretch = true
stretch_margin_left = 64
stretch_margin_top = 8
stretch_margin_right = 64
stretch_margin_bottom = 12
texture_under = ExtResource("6_bx5w1")
texture_progress = SubResource("AtlasTexture_1r6im")
tint_under = Color(0.329158, 0.329158, 0.329158, 1)

[node name="ExperienceLabel" type="Label" parent="Experience"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -16.0
offset_right = 106.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "Level: 1   -   XP: 000/100"
label_settings = SubResource("LabelSettings_taq47")
horizontal_alignment = 1
vertical_alignment = 1
